fixed bug in JS that made button text align to left upon resetting

--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@252&display=swap');
+
+/* global style */
+
 body {
 	background-color: #313B72;
 }
+
+/* heading and game layout/field */
 .gamefield, header {
 	background-color: #313B72;
 	text-align: center;
 	font-family: 'Roboto Slab', serif;
 }
+
+/* text elements on page */
 h1, h2, h3 {
 	color: #F7FFF7;
 }
@@ -25,13 +32,14 @@ hr {
 	width: 10%;
 }
 
+/* buttons and button alternatives */
+
 button {
 	border-style:double;
 	background-color: #F7FFF7;
 	font-family: 'Roboto Slab', serif;
 	font-size: 100%;
 	margin: auto;
-	display: inline-flex;
 	align-items: center;
 }
 .yes, .no {
@@ -54,6 +62,7 @@ button:hover {
 	cursor: pointer;
 }
 
+/* media queries */
 
 @media only screen and (max-width: 900px) {
 	.gamefield {
